.metadata/.plugins/org.eclipse.cdt.ui/cv3.build.log
16:49:14 **** Incremental Build of configuration Debug for project cv3 ****
make -j4 all 
arm-none-eabi-gcc "../Src/sct.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DSTM32F030x8 -DSTM32F030R8Tx -DSTM32 -DSTM32F0 -DNUCLEO_F030R8 -c -I../Inc -I"C:/MKSCV01/MKSCV01/cv3/CMSIS/Device/ST/STM32F0xx/Include" -I"C:/MKSCV01/MKSCV01/cv3/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/sct.d" -MT"Src/sct.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sct.o"
../Src/sct.c:37:1: error: expected identifier or '(' before '{' token
   37 | {
      | ^
make: *** [Src/subdir.mk:31: Src/sct.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

16:49:14 Build Failed. 2 errors, 0 warnings. (took 289ms)

